--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,9 @@ body{
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation-name: lefty;
+    animation-duration: 2s;
+    backface-visibility: hidden;
 }
 
 .heading-primary-sub{
@@ -63,6 +66,11 @@ body{
     font-size: 20px;
     font-weight: 900px;
     letter-spacing: 17px;
+    animation-name: righty;
+    animation-duration: 2s;
+    /*apply this property wherever there is a glitch during animation on the element
+    undergoing animation*/
+    backface-visibility: hidden;
 }
 
 .text-box{
@@ -70,4 +78,42 @@ body{
     top: 40%;
     left: 50%;
     transform: translate(-47%,-50%);
+}
+
+@keyframes lefty{
+    
+    0%{
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+    
+    80%{
+        opacity: 0.8;
+        transform: translateX(5%);
+    }
+    
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
+}
+
+@keyframes righty{
+    
+    0%{
+        opacity: 0;
+        transform: translateX(100%);
+    }
+    
+    80%{
+        opacity: 0.8;
+        transform: translateX(-5%);
+    }
+    
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+    
 }
