--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ body{
     /*apply this property wherever there is a glitch during animation on the element
     undergoing animation*/
     backface-visibility: hidden;
+    margin-bottom: 40px;
 }
 
 .text-box{
@@ -78,6 +79,7 @@ body{
     top: 40%;
     left: 50%;
     transform: translate(-47%,-50%);
+    text-align: center;
 }
 
 @keyframes lefty{
@@ -116,4 +118,70 @@ body{
         transform: translateX(0);
     }
     
+}
+
+@keyframes topy{
+    
+    0%{
+        opacity: 0;
+        transform: translateY(500%);
+        transform: translateY(500%);
+    }
+    
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+    
+}
+
+.btn-white{
+    background-color: #fff;
+    color: #777;
+}
+
+.btn:visited,.btn:link{
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px 40px;
+    border-radius: 100px;
+    transition: all 0.2s;
+    position: relative;
+}
+
+.btn-animate{
+    animation: topy 2s;
+}
+
+.btn:hover{
+    transform: translateY(-3px);
+    box-shadow: 0px 10px 20px rgba(0,0,0,0.5);
+}
+
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
+}
+
+.btn::after{
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+}
+
+.btn-white::after{
+    background-color: #fff;
+}
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
 }
