--- a/css/style.css
+++ b/css/style.css
@@ -1,187 +1,131 @@
-/*
-COLORS:
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box; }
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+html {
+  font-size: 62.5%; }
 
-*/
+body {
+  font-family: "Lato",sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem; }
 
-/*non inheritable values*/
+@keyframes lefty {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%); }
+  80% {
+    opacity: 0.8;
+    transform: translateX(5%); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+@keyframes righty {
+  0% {
+    opacity: 0;
+    transform: translateX(100%); }
+  80% {
+    opacity: 0.8;
+    transform: translateX(-5%); }
+  100% {
+    opacity: 1;
+    transform: translateX(0); } }
 
-/*inheritable values*/
-body{
-    font-family: "Lato",sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: #777777;
-    padding: 30px;
-}
+@keyframes topy {
+  0% {
+    opacity: 0;
+    transform: translateY(500%); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
-.header{
-    height: 95vh;
-    width: auto;
-    background-image: linear-gradient(to right,rgba(126, 213, 111, 0.6),rgba(40, 180, 133, 0.6)),url(../img/hero.jpg);
-    background-size: cover;
-    background-position: center center;
-    clip-path:polygon(0 0,100% 0,100% 75vh,0 100%);
-    position: relative;
-}
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
 
-.logo{
-    height: 40px;
-    width: auto;
-}
+.btn:visited, .btn:link {
+  text-transform: uppercase;
+  text-decoration: none;
+  display: inline-block;
+  padding: 1.5rem 4rem;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.6rem; }
 
-.class-logo{
+.btn--animate {
+  animation: topy 2s; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0px 1rem 2rem rgba(0, 0, 0, 0.5); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active {
+  transform: translateY(-0.1rem);
+  box-shadow: 0px 0.5rem 1rem rgba(0, 0, 0, 0.5); }
+
+.btn::after {
+  content: '';
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s; }
+
+.header {
+  height: 95vh;
+  width: auto;
+  background-image: linear-gradient(to right, rgba(126, 213, 111, 0.6), rgba(40, 180, 133, 0.6)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: center center;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative; }
+  .header__logo {
+    height: 4rem;
+    width: auto; }
+  .header__class-logo {
     position: absolute;
-    top: 40px;
-    left: 40px;
-}
+    top: 4rem;
+    left: 4rem; }
+  .header__text-box {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-47%, -50%);
+    text-align: center; }
 
-.heading-primary{
-    color: #fff;
-    text-transform: uppercase;
-}
-
-.heading-primary-main{
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase; }
+  .heading-primary--main {
     display: block;
-    font-size: 60px;
-    font-weight: 400;
-    letter-spacing: 35px;
+    font-size: 8rem;
+    font-weight: 300;
+    letter-spacing: 3.5rem;
     animation-name: lefty;
     animation-duration: 2s;
-    backface-visibility: hidden;
-}
-
-.heading-primary-sub{
+    backface-visibility: hidden; }
+  .heading-primary--sub {
     display: block;
-    font-size: 20px;
-    font-weight: 900px;
-    letter-spacing: 17px;
+    font-size: 2.5rem;
+    font-weight: 700;
+    letter-spacing: 1.7rem;
     animation-name: righty;
     animation-duration: 2s;
     /*apply this property wherever there is a glitch during animation on the element
     undergoing animation*/
     backface-visibility: hidden;
-    margin-bottom: 40px;
-}
-
-.text-box{
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-47%,-50%);
-    text-align: center;
-}
-
-@keyframes lefty{
-    
-    0%{
-        opacity: 0;
-        transform: translateX(-100%);
-    }
-    
-    80%{
-        opacity: 0.8;
-        transform: translateX(5%);
-    }
-    
-    100%{
-        opacity: 1;
-        transform: translateX(0);
-    }
-    
-}
-
-@keyframes righty{
-    
-    0%{
-        opacity: 0;
-        transform: translateX(100%);
-    }
-    
-    80%{
-        opacity: 0.8;
-        transform: translateX(-5%);
-    }
-    
-    100%{
-        opacity: 1;
-        transform: translateX(0);
-    }
-    
-}
-
-@keyframes topy{
-    
-    0%{
-        opacity: 0;
-        transform: translateY(500%);
-        transform: translateY(500%);
-    }
-    
-    100%{
-        opacity: 1;
-        transform: translateY(0);
-    }
-    
-}
-
-.btn-white{
-    background-color: #fff;
-    color: #777;
-}
-
-.btn:visited,.btn:link{
-    text-transform: uppercase;
-    text-decoration: none;
-    display: inline-block;
-    padding: 15px 40px;
-    border-radius: 100px;
-    transition: all 0.2s;
-    position: relative;
-}
-
-.btn-animate{
-    animation: topy 2s;
-}
-
-.btn:hover{
-    transform: translateY(-3px);
-    box-shadow: 0px 10px 20px rgba(0,0,0,0.5);
-}
-
-.btn:active{
-    transform: translateY(-1px);
-    box-shadow: 0px 5px 10px rgba(0,0,0,0.5);
-}
-
-.btn::after{
-    content: '';
-    display: inline-block;
-    width: 100%;
-    height: 100%;
-    border-radius: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s;
-}
-
-.btn-white::after{
-    background-color: #fff;
-}
-
-.btn:hover::after{
-    transform: scaleX(1.4) scaleY(1.6);
-    opacity: 0;
-}
+    margin-bottom: 4rem; }
